feat: Implement screenshot management, annotation editing, and version history features
- Added ScreenshotManager component for uploading and managing screenshots.
- Introduced AnnotationEditor component for creating and editing annotations on screenshots.
- Implemented VersionHistory component to view and rollback annotation versions.
- Enhanced App component to manage navigation between different views.
- Created PythonPreview component for generating Python code from annotations.
- Developed API functions for handling screenshots and annotations.
- Added global type definitions for CSS modules.
- Updated index.tsx to include global CSS styles.
- Removed unused server index file and client index file.
- Updated TypeScript configuration for improved module resolution and type definitions.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,9 +9,9 @@
     // See also https://aka.ms/tsconfig/module
     "module": "umd",
     "target": "esnext",
-    "types": [],
+    "types": ["node"],
     // For nodejs:
-    // "lib": ["esnext"],
+    "lib": ["dom", "dom.iterable", "esnext"],
     // "types": ["node"],
     // and npm install -D @types/node
 
@@ -34,9 +34,10 @@
 
     // Recommended Options
     "strict": true,
-    "jsx": "react-jsx",
+    "jsx": "react",
     "isolatedModules": false,
     "esModuleInterop": true,
+    "moduleResolution": "nodenext",
     "allowSyntheticDefaultImports": true,
     "noUncheckedSideEffectImports": true,
     "moduleDetection": "force",
