--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "airtest_template_picker",
   "version": "1.0.0",
-  "type": "module",
-  "main": "index.js",
   "scripts": {
-    "start:server": "nodemon ./src/server/main.ts",
-    "dev:client": "rspack dev"
+    "dev:server": "nodemon --exec tsx server.ts",
+    "dev:client": "rspack dev",
+    "dev": "npm-run-all -p dev:client dev:server",
+    "build": "rspack build"
   },
   "author": "",
   "license": "ISC",
@@ -25,6 +25,7 @@
     "react-component-click-handler": "1.0.2",
     "autoprefixer": "^10.4.24",
     "tailwindcss": "^4.1.18",
+    "@tailwindcss/postcss": "^4.1.18",
     "typescript": "^5.9.3",
     "code-inspector-plugin": "^1.3.2",
     "css-loader": "^7.1.2",
