--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "tsx": "^4.21.0",
     "@rspack/cli": "^1.7.4",
     "@rspack/core": "^1.7.4",
     "@rspack/plugin-react-refresh": "^1.6.0",
+    "@tailwindcss/postcss": "^4.1.18",
     "@types/body-parser": "^1.19.6",
     "@types/cors": "^2.8.19",
     "@types/express": "^4.17.25",
@@ -22,29 +22,31 @@
     "@types/node": "^25.1.0",
     "@types/react": "^19.2.10",
     "@types/react-dom": "^19.2.3",
-    "react-component-click-handler": "1.0.2",
     "autoprefixer": "^10.4.24",
-    "tailwindcss": "^4.1.18",
-    "@tailwindcss/postcss": "^4.1.18",
-    "typescript": "^5.9.3",
     "code-inspector-plugin": "^1.3.2",
     "css-loader": "^7.1.2",
     "less-loader": "^12.2.0",
     "postcss-loader": "^8.1.1",
+    "react-component-click-handler": "1.0.2",
     "react-refresh": "^0.18.0",
-    "style-loader": "^4.0.0"
+    "style-loader": "^4.0.0",
+    "tailwindcss": "^4.1.18",
+    "tsx": "^4.21.0",
+    "typescript": "^5.9.3"
   },
   "dependencies": {
-    "winston": "^3.17.0",
     "body-parser": "^2.2.2",
     "cors": "^2.8.6",
+    "dotenv": "^16.5.0",
     "express": "^5.2.1",
     "multer": "^2.0.2",
+    "nodemon": "^3.1.10",
+    "npm-run-all": "^4.1.5",
     "postcss": "^8.5.6",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
-    "nodemon": "^3.1.10",
-    "npm-run-all": "^4.1.5",
-    "dotenv": "^16.5.0"
+    "react-router": "^7.13.0",
+    "react-router-dom": "^7.13.0",
+    "winston": "^3.17.0"
   }
 }
