--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "multer": "^2.0.2",
     "nodemon": "^3.1.10",
     "npm-run-all": "^4.1.5",
+    "pixi.js": "^8.16.0",
     "postcss": "^8.5.6",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
