feat: add PixiJSCore for image annotation with interactive features
- Introduced PixiJSCore class to manage image loading, annotation rendering, and user interactions.
- Implemented functionalities for creating, selecting, updating, and deleting annotations.
- Added support for resizing annotations with visual handles.
- Integrated viewport for zooming and panning capabilities.
- Enhanced event handling for mouse interactions on the canvas and annotations.
- Updated TypeScript configuration to use 'node' module resolution.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -37,7 +37,7 @@
     "jsx": "react",
     "isolatedModules": false,
     "esModuleInterop": true,
-    "moduleResolution": "nodenext",
+    "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
     "noUncheckedSideEffectImports": true,
     "moduleDetection": "force",
