--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "typescript": "^5.9.3"
   },
   "dependencies": {
+    "@pixi/devtools": "^2.0.1",
     "body-parser": "^2.2.2",
     "cors": "^2.8.6",
     "dotenv": "^16.5.0",
@@ -42,6 +43,7 @@
     "multer": "^2.0.2",
     "nodemon": "^3.1.10",
     "npm-run-all": "^4.1.5",
+    "pixi-viewport": "^6.0.3",
     "pixi.js": "^8.16.0",
     "postcss": "^8.5.6",
     "react": "^19.2.4",
