--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-dom": "^19.2.4",
     "react-router": "^7.13.0",
     "react-router-dom": "^7.13.0",
+    "uuid": "^13.0.0",
     "winston": "^3.17.0"
   }
 }
