--- a/package.json
+++ b/package.json
@@ -35,8 +35,19 @@
     "typescript": "^5.9.3"
   },
   "dependencies": {
+    "@codemirror/autocomplete": "^6.20.0",
+    "@codemirror/basic-setup": "^0.20.0",
+    "@codemirror/commands": "^6.10.2",
+    "@codemirror/highlight": "^0.19.8",
+    "@codemirror/lang-python": "^6.2.1",
+    "@codemirror/language": "^6.12.1",
+    "@codemirror/search": "^6.6.0",
+    "@codemirror/state": "^6.5.4",
+    "@codemirror/theme-one-dark": "^6.1.3",
+    "@codemirror/view": "^6.39.13",
     "@pixi/devtools": "^2.0.1",
     "body-parser": "^2.2.2",
+    "codemirror": "^6.0.2",
     "cors": "^2.8.6",
     "dotenv": "^16.5.0",
     "express": "^5.2.1",
@@ -50,6 +61,7 @@
     "react-dom": "^19.2.4",
     "react-router": "^7.13.0",
     "react-router-dom": "^7.13.0",
+    "sharp": "^0.34.5",
     "uuid": "^13.0.0",
     "winston": "^3.17.0"
   }
